fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 100vh;
     margin: 0;
     background-color: #FFDEE9;
